@@ -1,5 +1,7 @@
 === master
 
+* Deprecate Sequel::SQL::Expression#sql_literal and #lit (jeremyevans)
+
 * Don't issue deprecation warnings on ruby 1.8.7, as Sequel 5 is dropping support for it (jeremyevans)
 
 * Deprecate Sequel::BasicObject#remove_methods! (jeremyevans)
